utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ExistingReference.ide
package valid

typedef configuration ExistingReference {
    tool Common
}
