utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExistingReference.ide
package invalid

typedef configuration ExistingReference {
    tool Common1
}
